simple_formの導入 + 商品登録画面の作成

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,14 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    attiributes:
+      item:
+        name: 商品名
+        image: 商品画像
+        price: 価格
+        description: 詳細
+        hidden: 非表示
+        display_order: 表示順
   date:
     abbr_day_names:
     - 日
