配送情報編集時に正しい挙動になるよう修正 + 商品新規登録画面で個数を選べるよう修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,12 +9,12 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       product: 商品
-    attiributes:
+    attributes:
       product:
         name: 商品名
         image: 商品画像
         price: 価格
-        description: 詳細
+        description: 説明
         hidden: 非表示
         display_order: 表示順
   date:
