--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,7 +16,7 @@ ja:
         price: 価格
         description: 説明
         hidden: 非表示
-        display_order: 表示順
+        position: 表示順
   date:
     abbr_day_names:
     - 日
