--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       product: 商品
+      order_detail: 注文詳細
     attributes:
       product:
         name: 商品名
@@ -17,6 +18,8 @@ ja:
         description: 説明
         hidden: 非表示
         position: 表示順
+      order_detail:
+        quantity: 数量
   date:
     abbr_day_names:
     - 日
